# codex-title

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  codex-title  codex-title-poc  codex-title-test  install.sh  pyproject.toml  uninstall.sh
.long-task-harness/: features.json  long-task-progress.md
docs/: implementation.md
skills/long-task-harness/.pi/extensions/: resume-sessions.ts
skills/long-task-harness/scripts/: claude_code_install_hooks.py  claude_code_precommit_check.py  git_add.py
src/codex_title/: __init__.py  cli.py
swift-poc/: Package.resolved  Package.swift
swift-poc/Sources/CodexTitlePoc/: main.swift
swift-poc/Sources/LibprocPoc/: CodexLogReducer.swift  CodexTimeoutOverlay.swift  LibprocPoc.swift  LogDiscovery.swift  LogSelection.swift
swift-poc/Sources/LibprocPocCLI/: main.swift
swift-poc/Tests/LibprocPocTests/: LibprocPocTests.swift
tests/: test_cli_state.py  test_resume_selection.py
