[project]
name = "codex-title"
version = "0.1.29"
description = "Codex wrapper that updates terminal tab title while it runs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Thomas Mustier" }]
keywords = ["codex", "cli", "terminal", "title", "wrapper"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
]

[project.scripts]
codex-title = "codex_title.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
